updated styles for home page and fixed spacing

--- a/less/explainer.less
+++ b/less/explainer.less
@@ -15,7 +15,7 @@
 .nanny-container {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   padding: 5% 0;
 }
 
@@ -30,6 +30,8 @@
   .parent-vector {
     width: 100%;
     padding: 20% 10%;
+    display: flex;
+    justify-content: center;
   }
 
   .explainer-button {
@@ -62,7 +64,9 @@
 
   .nanny-vector {
     width: 100%;
-    padding: 20% 10%;
+    padding: 19% 10%;
+    display: flex;
+    justify-content: center;
   }
 
   .explainer-button {
