--- a/less/footer.less
+++ b/less/footer.less
@@ -2,7 +2,7 @@
   background: salmon;
   display: flex;
   padding: 10% 0;
-  margin-top: 10%;
+  margin-top: 2%;
 }
 
 .footer-vector {
