--- a/less/how-it-works.less
+++ b/less/how-it-works.less
@@ -17,12 +17,13 @@ div {
   color: white;
   margin-left: 10%;
   width: 40%;
+  padding-top: 8%;
 
   h1 {
     padding: 10% 0;
   }
 
   h2 {
-    padding: 10% 0;
+    padding: 5% 0;
   }
 }
